--- a/JSBackEnd/Cubicle/views/partials/cube.hbs
+++ b/JSBackEnd/Cubicle/views/partials/cube.hbs
@@ -3,4 +3,8 @@
         <p class="name">{{name}}</p>
         <p><span>Difficulty level:</span> {{difficulty}}</p>
         <a class="btn" href="/details/{{id}}">Details</a>
+         <button class="btn show">SHOW MORE</button>
+        <div class="cube-description">
+                {{description}}
+        </div>
 </div>
