--- a/JSBackEnd/Cubicle-Extended/views/details.hbs
+++ b/JSBackEnd/Cubicle-Extended/views/details.hbs
@@ -7,4 +7,16 @@
     <a class="btn" href="/">Back</a>
     <a class="btn" href="/edit/{{_id}}">Edit</a>
   </div>
+  <div class="details">
+    <form action="/comments/{{_id}}/create" method="POST">
+      <input type="text" name="author" placeholder="Your name">
+      <textarea name="content" placeholder="Write your comment..."></textarea>
+      <input class="btn" type="submit" value="Post comment">
+    </form>
+    {{#each comments}}
+    {{> comment}} <br>
+    {{else}}
+    <span>No comments yet.</span>
+    {{/each}}
+  </div>
   {{/with}}
