--- a/JSBackEnd/Cubicle-Extended/views/partials/cube.hbs
+++ b/JSBackEnd/Cubicle-Extended/views/partials/cube.hbs
@@ -2,9 +2,9 @@
         <img class="cube" src="{{imageUrl}}">
         <p class="name">{{name}}</p>
         <p><span>Difficulty level:</span> {{difficulty}}</p>
-        <a class="btn" href="/details/{{_id}}">Details</a>
-         <button class="btn show">SHOW MORE</button>
+        <button class="btn">SHOW MORE</button>
         <div class="cube-description">
                 {{description}}
+        <a class="btn" href="/details/{{_id}}">Details</a>
         </div>
 </div>
