--- a/JSBackEnd/Cubicle-Extended/views/details.hbs
+++ b/JSBackEnd/Cubicle-Extended/views/details.hbs
@@ -4,19 +4,28 @@
   <div class="details">
     <p><span>Description:</span> {{description}}</p>
     <p><span>Difficulty level:</span> {{difficulty}}</p>
-    <a class="btn" href="/">Back</a>
+    <a class="btn" href="/details/{{_id}}/attach">Attach Accessory</a>
     <a class="btn" href="/edit/{{_id}}">Edit</a>
+    <a class="btn" href="/">Back</a>
   </div>
+   <h2>Accessories</h2>
+    <div class="accessories">
+         {{#each accessories}}
+          {{> accessory}} <br>
+          {{else}}
+          <h3 class="italic">This cube has no accessories yet...</h3>
+          {{/each}}
+    </div>
   <div class="details">
     <form action="/comments/{{_id}}/create" method="POST">
       <input type="text" name="author" placeholder="Your name">
       <textarea name="content" placeholder="Write your comment..."></textarea>
       <input class="btn" type="submit" value="Post comment">
     </form>
-    {{#each comments}}
-    {{> comment}} <br>
-    {{else}}
-    <span>No comments yet.</span>
-    {{/each}}
+          {{#each comments}}
+          {{> comment}} <br>
+          {{else}}
+          <span>No comments yet.</span>
+          {{/each}}
   </div>
   {{/with}}
