Partial implementation of auth service

--- a/JSBackEnd/Cubicle-Extended-Authentication/views/details.hbs
+++ b/JSBackEnd/Cubicle-Extended-Authentication/views/details.hbs
@@ -6,6 +6,7 @@
     <p><span>Difficulty level:</span> {{difficulty}}</p>
     <a class="btn" href="/products/details/attach/{{_id}}">Attach Accessory</a>
     <a class="btn" href="/products/edit/{{_id}}">Edit</a>
+    <a class="btn" href="/products/delete/{{_id}}">Delete</a>
     <a class="btn" href="/products">Back</a>
   </div>
    <h2>Accessories</h2>
