--- a/JSBackEnd/Cubicle-Extended-Authentication/views/details.hbs
+++ b/JSBackEnd/Cubicle-Extended-Authentication/views/details.hbs
@@ -4,9 +4,12 @@
   <div class="details">
     <p><span>Description:</span> {{description}}</p>
     <p><span>Difficulty level:</span> {{difficulty}}</p>
+    <p><span>Created by:</span> {{creator}}</p>
+    {{#if isOwner}}
     <a class="btn" href="/products/details/attach/{{_id}}">Attach Accessory</a>
     <a class="btn" href="/products/edit/{{_id}}">Edit</a>
     <a class="btn" href="/products/delete/{{_id}}">Delete</a>
+    {{/if}}
     <a class="btn" href="/products">Back</a>
   </div>
    <h2>Accessories</h2>
